--- a/TensorFlow2.0（一）：基本数据结构——张量.ipynb
+++ b/TensorFlow2.0（一）：基本数据结构——张量.ipynb
@@ -1962,9 +1962,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:study_python]",
+   "display_name": "tensorflow_gpu",
    "language": "python",
-   "name": "conda-env-study_python-py"
+   "name": "tensorflow_gpu"
   },
   "language_info": {
    "codemirror_mode": {
